# wasmer-bench

./: .gitignore  Cargo.toml  Justfile  README.md  mandelbrot.c  plot-gm.txt  plot-lim.txt  plot-wo-sp.txt  plot.txt
c/: binarytrees.c  fannkuchredux.c  fasta.c  knucleotide.c  mandelbrot.c  nbody.c  pidigits.c  regexredux.c  revcomp.c  spectralnorm.c
java/: binarytrees.java  fannkuchredux.java  fasta.java  knucleotide.java  mandelbrot.java  nbody.java  revcomp.java  spectralnorm.java
results/: binarytrees-c.json  binarytrees-c.md  binarytrees-java.json  binarytrees-java.md  binarytrees-native.json  binarytrees-native.md  binarytrees-wasmer-cranelift.json  binarytrees-wasmer-cranelift.md  binarytrees-wasmer-default.json  binarytrees-wasmer-default.md  binarytrees-wasmer-jit.json  binarytrees-wasmer-jit.md  binarytrees-wasmer-llvm.json  binarytrees-wasmer-llvm.md  binarytrees-wasmer-native.json  binarytrees-wasmer-native.md  binarytrees-wasmer-singlepass.json  binarytrees-wasmer-singlepass.md  binarytrees-wasmtime.json  binarytrees-wasmtime.md  fannkuchredux-c.json  fannkuchredux-c.md  fannkuchredux-java.json  fannkuchredux-java.md  fannkuchredux-native.json  fannkuchredux-native.md  fannkuchredux-wasmer-cranelift.json  fannkuchredux-wasmer-cranelift.md  fannkuchredux-wasmer-default.json  fannkuchredux-wasmer-default.md  fannkuchredux-wasmer-jit.json  fannkuchredux-wasmer-jit.md  fannkuchredux-wasmer-llvm.json  fannkuchredux-wasmer-llvm.md  fannkuchredux-wasmer-native.json  fannkuchredux-wasmer-native.md  fannkuchredux-wasmer-singlepass.json  (+123 more)
rust/: Cargo.toml
(+1 files in other folders)
