[package]
name = "wasmer-bench"
version = "0.1.0"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.3"
rayon = "1.5"
num_cpus = "1.13"
spin = "0.7"
bumpalo = "3.6"
fxhash = "0.2"
num-traits = "0.2"
scoped_threadpool = "0.1"