[package]
name = "wasm-bench"
version = "0.1.0"
authors = ["Hideyuki Tanaka <tanaka.hideyuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.3"
spin = "0.7"
bumpalo = "3.6"
fxhash = "0.2"
num-traits = "0.2"
generic-array = "0.14"
numeric-array = "0.5"
